unpackaged/objects/GitConnect__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Conexões com o Git</description>
    <fields>
        <fullName>Password__c</fullName>
        <description>Senha da conexão Git</description>
        <label>Password</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL da conexão Git</description>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Nome do usuário</description>
        <label>Username</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Git Connect</label>
</CustomObject>